Add basic API endpoints and update Vercel config
Introduces basic Express API endpoints for health, debug, test, contact, and ping in backend/api/basic.js and backend/api/handler.js. Refactors backend/api/index.js to a simplified serverless handler. Adds backend/api/package.json for dependencies. Updates backend/vercel.json to use index.js as the main entry and adjusts function duration.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,19 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/minimal.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/api/minimal.js"
+      "dest": "/api/index.js"
     }
   ],
   "functions": {
-    "api/minimal.js": {
-      "maxDuration": 30
+    "api/index.js": {
+      "maxDuration": 10
     }
   }
 }
