Refactor API endpoints and improve Vercel config
Split health, ping, and test endpoints into separate files for better routing and maintainability. Enhanced CORS handling and request parsing in the main API handler. Updated package.json to set the main entry to api/index.js and added Node.js engine requirement. Improved vercel.json configuration for function runtime, rewrites, and build command. Added .vercelignore to exclude unnecessary files from deployment.

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,20 +1,21 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ],
+  "outputDirectory": "dist",
+  "buildCommand": "echo 'No build needed'",
   "functions": {
-    "api/index.js": {
-      "maxDuration": 10
+    "api/*.js": {
+      "runtime": "nodejs18.x",
+      "maxDuration": 30
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/api/index"
+    }
+  ]
 }
