--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,11 @@
   "name": "trivedia-flow-backend",
   "version": "1.0.0",
   "description": "Backend API for Trivedia Flow with admin panel",
-  "main": "server.js",
+  "main": "api/index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -11,7 +14,8 @@
     "seed:portfolio": "node scripts/seed-portfolio.js",
     "seed:pricing": "node scripts/seed-pricing.js",
     "migrate": "node scripts/migrate-projects.js",
-    "production": "NODE_ENV=production node server.js"
+    "production": "NODE_ENV=production node server.js",
+    "vercel-build": "echo 'Build complete'"
   },
   "keywords": [
     "nodejs",
